feat: add some method for quiz and topBar class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!--      <span class="quiz-topbar__item">1</span>-->
 <!--      <span class="quiz-topbar__item">1</span>-->
     </div>
-    <form action="#">
+    <form action="#" id="quiz-form" onsubmit="event.preventDefault()">
       <div class="quiz-question">
         <div class="quiz-question__body quiz-question-body" id="quiz-body">
 <!--          <p class="quiz-question-body__title">Что получится, если сложить true + false?</p>-->
@@ -74,7 +74,7 @@
 <!--          </ul>-->
         </div>
         <div class="quiz-question__submit">
-          <button class="button" id="nextBtn" type="submit" disabled>Продолжить</button>
+          <button class="button" id="nextBtn" type="submit" disabled="disabled">Продолжить</button>
         </div>
       </div>
     </form>
