--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <main class="content">
   <div class="quiz">
     <div class="quiz-topbar" id="quiz-topbar"></div>
+    <div class="quiz-topbar-tablet" id="quiz-topbar-tablet">
+      <h2 class="quiz-topbar-tablet__title">Вопрос <strong class="quiz-topbar-tablet__current">1</strong>
+        из <stront class="quiz-topbar-tablet__length">20</stront></h2>
+    </div>
     <form action="#" id="quiz-form" onsubmit="event.preventDefault()">
       <div class="quiz-question">
         <div class="quiz-question__body quiz-question-body" id="quiz-body">
@@ -32,87 +36,21 @@
     </form>
   </div>
 
-  <section class="result ">
+  <section class="result hidden">
     <div class="quiz-result">
       <div class="quiz-result__layout" id="quiz-result__layout">
       </div>
       <div class="quiz-result__buttons ">
-        <form action="#" class="quiz-result__retry-form">
+        <form action="" class="quiz-result__retry-form">
           <button type="submit" class="quiz-result-button quiz-result__retry-button">Пройти заново</button>
         </form>
-        <form action="#" class="quiz-result__save-form">
+        <form action="" class="quiz-result__save-form" onsubmit="event.preventDefault()" onclick="alert('Данная опция пока не работает')">
           <button type="submit" class="quiz-result-button quiz-result__save-button">Опубликовать результат в профиле
           </button>
         </form>
       </div>
     </div>
-    <div class="result__quiz">
-<!--      <div class="quiz-question ">-->
-<!--        <div class="quiz-question__body quiz-question-body quiz-question__correct">-->
-<!--          <p class="quiz-question-body__title">Какая арифметическая операция приводит к ошибке в javascript?</p>-->
-<!--          <ul class="quiz-question__answers">-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label quiz-answer-correct">-->
-<!--                <input class="quiz-question__input"-->
-<!--                       checked="checked"-->
-<!--                       disabled="disabled"-->
-<!--                       type="radio" name="answer-${this.currentQuiz}1"-->
-<!--                       value="${answer.value}1"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">Деление на ноль.</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label">-->
-<!--                <input class="quiz-question__input" disabled="disabled" type="radio" name="answer-${this.currentQuiz}1" value="${answer.value}1"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">Никакая из вышеперечисленных.</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label">-->
-<!--                <input class="quiz-question__input" disabled="disabled" type="radio" name="answer-${this.currentQuiz}1" value="${answer.value}1"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">${answer.value}</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="quiz-question">-->
-<!--        <div class="quiz-question__body quiz-question-body quiz-question__incorrect">-->
-<!--          <p class="quiz-question-body__title">${current.question}</p>-->
-<!--          <ul class="quiz-question__answers">-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label quiz-answer-incorrect">-->
-<!--                <input class="quiz-question__input "-->
-<!--                       type="radio"-->
-<!--                       checked-->
-<!--                       disabled="disabled"-->
-<!--                       name="answer-${this.currentQuiz}"-->
-<!--                       value="${answer.value}"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">${answer.value}</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label quiz-answer-correct">-->
-<!--                <input class="quiz-question__input" type="radio" disabled="disabled" name="answer-${this.currentQuiz}" value="${answer.value}"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">${answer.value}</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--            <li class="quiz-question__answer">-->
-<!--              <label class="quiz-question__label">-->
-<!--                <input class="quiz-question__input" disabled="disabled" type="radio" name="answer-${this.currentQuiz}" value="${answer.value}"-->
-<!--                       data-answer="${answer.status}">-->
-<!--                <span class="quiz-question__input-text">${answer.value}</span>-->
-<!--              </label>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+    <div class="result__quiz"></div>
   </section>
 
 </main>
