feat: responsive layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 
 <main class="content">
-  <div class="quiz">
+  <section class="quiz">
     <div class="quiz-topbar" id="quiz-topbar"></div>
     <div class="quiz-topbar-tablet" id="quiz-topbar-tablet">
       <h2 class="quiz-topbar-tablet__title">Вопрос <strong class="quiz-topbar-tablet__current">1</strong>
@@ -34,7 +34,7 @@
         </div>
       </div>
     </form>
-  </div>
+  </section>
 
   <section class="result hidden">
     <div class="quiz-result">
